revisiones de las traducciones de ejercicios hasta el capítulo 4. Añadidas algunas notas. Cambiados nombres de algunos ejercicios (de ahí la edición de chapter_info)

--- a/html/00_intro.html
+++ b/html/00_intro.html
@@ -146,7 +146,7 @@ console.log(total);
 
 <p><a class="p_ident" id="p-vx/hH46gXD" href="#p-vx/hH46gXD" tabindex="-1" role="presentation"></a>Al final del programa, después de que la construcción <code>while</code> haya terminado, se utiliza la operación <code>console.log</code> para mostrar el resultado.</p>
 
-<p><a class="p_ident" id="p-uAJ2bxUUHb" href="#p-uAJ2bxUUHb" tabindex="-1" role="presentation"></a>Finalmente, así es como podría verse el programa si tuviéramos a nuestra disposición las útiles operaciones <code>rango</code> y <code>suma</code>, que crean una colección de números dentro de un rango y calculan la suma de una colección de números, respectivamente:</p>
+<p><a class="p_ident" id="p-uAJ2bxUUHb" href="#p-uAJ2bxUUHb" tabindex="-1" role="presentation"></a>Finalmente, así es como podría verse el programa si tuviéramos a nuestra disposición las útiles operaciones <code>rango</code> y <code>suma</code>, que crean una colección de números enteros dentro de un intervalo (o rango) y calculan la suma de una colección de números, respectivamente:</p>
 
 <pre tabindex="0" class="snippet" data-language="javascript" ><a class="c_ident" id="c-zRop5p/qNC" href="#c-zRop5p/qNC" tabindex="-1" role="presentation"></a>console.log(suma(rango(<span class="tok-number">1</span>, <span class="tok-number">10</span>)));
 <span class="tok-comment">// → 55</span></pre>
